# adventofcode

./: .gitignore  3.py  pyproject.toml
python/: pyproject.toml  runner.py
python/2018/: 1.py  2.py  3.py
python/2019/1/: 1.py
python/2019/11/: 11.py
python/2019/13/: 13.py
python/2019/2/: 2.py
python/2019/3/: 3.py
python/2019/4/: 4.py
python/2019/5/: 5.py
python/2019/6/: 6.py
python/2019/7/: 7.py
python/2019/8/: 8.py
python/2019/9/: 9.py
python/2020/1/: 1.py
python/2020/10/: 10.py
python/2020/11/: 11.py
python/2020/12/: 12.py
python/2020/13/: 13.py
python/2020/2/: 2.py
python/2020/3/: 3.py
python/2020/4/: 4.py
python/2020/5/: 5.py
python/2020/6/: 6.py
python/2020/7/: 7.py
python/2020/8/: 8.py
python/2020/9/: 9.py
python/2021/1/: 1.py  solve.py
python/2021/10/: 10.py
python/2021/11/: 11.py
python/2021/12/: 12.py
python/2021/14/: 14.py
python/2021/15/: 15.py
python/2021/16/: 16.py
python/2021/17/: 17.py
python/2021/18/: solve.py
python/2021/19/: 19.py
python/2021/2/: 2.py
python/2021/20/: solve.py
python/2021/21/: solve.py
python/2021/3/: 3.py
python/2021/4/: 4.py
python/2021/5/: 5.py
python/2021/6/: 6.py
python/2021/7/: 7.py
python/2021/8/: 8.py
python/2021/9/: 9.py
python/2022/: 1.py  2.py  3.py  4.py  5.py  6.py
python/2023/: 1.py
python/2023/10/: main.py
python/2023/2/: 2.py
python/2024/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
python/2025/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
python/aoclib/: __init__.py  polygon.py
(+47 files in other folders)
