[project]
name = "aoc"
version = "0.1.0"
description = ""
authors = [{ name = "Andreas Ellewsen", email = "andreas@ellewsen.no" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "numpy>=2.1.3,<3",
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.3,<3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
