[project]
name = "aoc"
version = "0.1.0"
description = ""
authors = [{ name = "Andreas Ellewsen", email = "andreas@ellewsen.no" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "galois>=0.4.7",
    "networkx>=3.6",
    "numpy>=2.1.3,<3",
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.3,<3",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
